Flex-Gap alternative fixes

--- a/src/styles/base/_flex.scss
+++ b/src/styles/base/_flex.scss
@@ -94,15 +94,15 @@
 
 /* Emulate Gap Support with Flexbox and Margins */
 .emulated-flex-gap {
-  --gap: 1rem;
+  --gap: 0.5rem;
   display: inline-flex;
   //flex-wrap: wrap;
-  margin: calc(-1 * var(--gap)) 0 0 calc(-1 * var(--gap));
+  margin: calc(-1 * var(--gap));
   width: calc(100% + var(--gap));
 }
 
 .emulated-flex-gap > * {
-  margin: var(--gap) 0 0 var(--gap);
+  margin: var(--gap);
 }
 
 
