--- a/src/styles/layout/_l-configurator.scss
+++ b/src/styles/layout/_l-configurator.scss
@@ -16,7 +16,8 @@
       overflow: hidden;
       background-color: $grey-lighter;
       border-radius: $border-radius-md;
-      flex: 0 0 34%;
+      flex: 0 0 31%;
+      font-size: 0.8rem;
 
       &:hover,
       &.active {
@@ -98,6 +99,7 @@
     .wizard-box {
       li {
         flex: 0 0 14%;
+        font-size: 1rem;
       }
     }
   }
